# clipkat

./: Cargo.toml  bacon.toml  clipcat.service  shell.nix
nix/: sources.json
proto/: manager.proto
src/: entry.rs  lib.rs  manager.rs
src/grpc/: client.rs  protobuf.rs  service.rs
