[package]
name = "clipcat"
version = "0.5.0"
authors = ["xrelkd 46590321+xrelkd@users.noreply.github.com"]
edition = "2018"

[features]
all = ["clipcatd", "clipcatctl", "clipcat-menu", "clipcat-notify"]
default = ["clipcatd", "clipcatctl", "clipcat-menu", "clipcat-notify"]

app = ["app_dirs", "structopt", "toml", "tracing-subscriber", "tracing-futures"]
monitor = ["x11-clipboard"]
daemon = [
  "daemonize", "libc",
  "tracing-subscriber", "tracing-journald",
  "tokio/signal", "serde_json",
  "bincode"
]
external_editor = ["tokio/process"]
builtin_finder = ["skim"]

wayland = ["wl-clipboard-rs"]

clipcatd = ["app", "monitor", "daemon"]
clipcatctl = ["app", "tokio/process", "tokio/io-std", "tokio/fs", "external_editor"]
clipcat-menu = ["app", "tokio/process", "external_editor", "builtin_finder"]
clipcat-notify = ["structopt", "monitor"]

[profile.bench]
opt-level = 3
lto = true
codegen-units = 1
debug = false
debug-assertions = false
rpath = false

[profile.dev]
opt-level = 0
lto = false
codegen-units = 4
debug = true
debug-assertions = true
rpath = false

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
debug = false
debug-assertions = false
rpath = false

[profile.test]
opt-level = 1
lto = false
codegen-units = 4
debug = true
debug-assertions = true
rpath = false

[lib]
name = "clipcat"
path = "src/lib.rs"

[[bin]]
name = "clipcatd"
path = "src/bin/clipcatd/main.rs"
required-features = ["clipcatd"]

[[bin]]
name = "clipcatctl"
path = "src/bin/clipcatctl/main.rs"
required-features = ["clipcatctl"]

[[bin]]
name = "clipcat-menu"
path = "src/bin/clipcat-menu/main.rs"
required-features = ["clipcat-menu"]

[[bin]]
name = "clipcat-notify"
path = "src/bin/clipcat-notify/main.rs"
required-features = ["clipcat-notify"]

[dependencies]
futures = "0.3"
tokio = { version = "1.7.0", features = ["rt-multi-thread", "sync","tracing"] }
snailquote = "0.3.1"
snafu = "0.6"

tonic = "0.4"
prost = "0.7"
http = "0.2"

tracing = "*"
tracing-subscriber = { version = "*", optional = true }
tracing-journald = { version = "*", optional = true }
tracing-futures = { version = "*", optional = true }

structopt = { version = "0.3", optional = true }
app_dirs = { version = "1", optional = true }
toml = { version = "0.5", optional = true }

serde = { version = "1", features = ["derive"] }
serde_with = "1"
serde_json = { version = "1", optional = true }
chrono = "0.4"
x11-clipboard = { git = "https://github.com/xrelkd/x11-clipboard", tag = "v0.6.0", optional = true }
wl-clipboard-rs = { version = "^0.4", optional = true }

bincode = { version = "1", optional = true }

libc = { version = "0.2", optional = true }
daemonize = { version = "0.4", optional = true }

skim = { version = "0.9", optional = true }

[build-dependencies]
tonic-build = { version = "0.4", features = ["prost"] }
# [profile.release]
# opt-level = 3
# lto = true
#
# [profile.dev]
# opt-level = 0
# [target."cfg(not(windows))".dependencies.ansi_term]
# version = "0.11"
